Fixes bug with mailer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>ResumeSite</title>
+  <title>Matthew Alan Higgins</title>
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
   <%= javascript_include_tag 'application' %>
