Adds viewport meta tag for mobile

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
   <title>Matthew Alan Higgins</title>
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
+  <meta name="viewport" content="width=device-width, user-scalable=no">
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
 </head>
