Slight changes to skills section heading on resume

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -40,7 +40,7 @@
     </div>
     <div id='resume-content' class='section hide'>
       <h2>Matthew Higgins</h2>
-      <h3>Skills</h3>
+      <h3>Skills & Technologies</h3>
         <ul class='skills right hide-for-small'>
           <li>CSS/Sass</li>
           <li>Postgresql</li>
@@ -71,7 +71,7 @@
             <span class='job-dates'>5/14 - Present</span>
             <span class='job-company'>LawKick - </span>
             <span class='job-title'>Web Developer</span>
-            <span class='job-location'>Los Angeles, CA</span>
+            <span class='job-location'>(Los Angeles, CA)</span>
             <i class="fa fa-caret-down"></i>
           </a>
           <ul class='job-duties hide'>
